--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,7 @@ h3 {
   display: block;
   cursor: pointer;
   transition: none;
+  touch-action: auto;
   -webkit-tap-highlight-color: transparent;
   outline: none;
 }
@@ -516,6 +517,88 @@ input:checked + .slider:before {
   -webkit-tap-highlight-color: transparent;
 }
 
+
+/* ============================================================
+   Scroll and reload page control
+============================================================ */
+
+/* Main container for the move-canvas */
+.move-canvas {
+  font-size: 12px;
+  position: relative;
+  display: inline-block;
+  width: 3.5em;
+  height: 2em;
+}
+
+/* Hide the native input element */
+.move-canvas input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* Styling for the slider background */
+.move-canvas .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  border: 1px solid #adb5bd;
+  transition: 0.4s;
+  border-radius: 30px;
+}
+
+/* Styling for the slider knob */
+.move-canvas .slider:before {
+  position: absolute;
+  content: "";
+  height: 1.4em;
+  width: 1.4em;
+  border-radius: 20px;
+  left: 0.27em;
+  bottom: 0.25em;
+  background-color: #adb5bd;
+  transition: 0.4s;
+}
+
+/* When the input is checked, change the slider background and border */
+.move-canvas input:checked + .slider {
+  background-color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+}
+
+/* Focus state for accessibility */
+.move-canvas input:focus + .slider {
+  box-shadow: 0 0 1px var(--secondary-color);
+}
+
+/* Move the knob to the right and change its color when checked */
+.move-canvas input:checked + .slider:before {
+  transform: translateX(1.4em);
+  background-color: #fff;
+}
+
+/* Styling for the additional switch text */
+.move-canvas .switch-text {
+  position: absolute;
+  left: 50px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: var(--primary-color);
+  color: #fff;
+  border: none;
+  padding: 0.2rem 0.9rem;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 0.7rem;
+  white-space: nowrap;
+  -webkit-tap-highlight-color: transparent;
+}
+
 /* ============================================================
    Responsive Adjustments
 ============================================================ */
@@ -534,3 +617,4 @@ input:checked + .slider:before {
     height: auto;
   }
 }
+
